<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>no.nav</groupId>
	<packaging>jar</packaging>
	<artifactId>familie-klage</artifactId>
	<version>${revision}${sha1}${changelist}</version>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.3</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<repositories>
		<repository>
			<id>confluent</id>
			<url>https://packages.confluent.io/maven/</url>
		</repository>
		<repository>
			<id>github</id>
			<url>https://maven.pkg.github.com/navikt/familie-felles</url>
		</repository>
	</repositories>

	<properties>
		<revision>1.0</revision>
		<sha1/>
		<changelist>-SNAPSHOT</changelist>
		<java.version>17</java.version>
		<kotlin.version>1.6.21</kotlin.version>
		<springdoc.version>1.6.9</springdoc.version>
		<mockk.version>1.12.5</mockk.version>
		<felles.version>1.20220811104902_c1860ff</felles.version>
		<prosessering.version>1.20220624132237_7f5ba9c</prosessering.version>
		<start-class>no.nav.familie.klage.ApplicationKt</start-class>
		<kontrakter.version>2.0_20220823143537_41dbade</kontrakter.version>
		<cucumber.version>7.3.4</cucumber.version>
		<nav.security.version>2.1.3</nav.security.version> <!-- Denne burde være samme versjon som i felles -->
		<okhttp3.version>4.9.1</okhttp3.version> <!-- overskrever spring sin versjon, blir brukt av mock-oauth2-server -->
		<unleash.version>4.4.1</unleash.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.jetbrains.kotlin</groupId>
			<artifactId>kotlin-stdlib</artifactId>
			<version>${kotlin.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-jetty</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jdbc</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-tomcat</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.kafka</groupId>
			<artifactId>spring-kafka</artifactId>
		</dependency>
		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-core</artifactId>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.module</groupId>
			<artifactId>jackson-module-kotlin</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-ui</artifactId>
			<version>${springdoc.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-kotlin</artifactId>
			<version>${springdoc.version}</version>
		</dependency>
		<dependency>
			<groupId>no.finn.unleash</groupId>
			<artifactId>unleash-client-java</artifactId>
			<version>${unleash.version}</version>
		</dependency>
		<dependency>
			<groupId>com.github.ben-manes.caffeine</groupId>
			<artifactId>caffeine</artifactId>
		</dependency>
		<dependency>
			<groupId>no.nav.familie.felles</groupId>
			<artifactId>util</artifactId>
			<version>${felles.version}</version>
		</dependency>
		<dependency>
			<groupId>no.nav.familie.felles</groupId>
			<artifactId>http-client</artifactId>
			<version>${felles.version}</version>
		</dependency>
		<dependency>
			<groupId>no.nav.familie</groupId>
			<artifactId>prosessering-jdbc</artifactId>
			<version>${prosessering.version}</version>
		</dependency>
		<dependency>
			<groupId>no.nav.familie.kontrakter</groupId>
			<artifactId>enslig-forsorger</artifactId>
			<version>${kontrakter.version}</version>
		</dependency>
		<dependency>
			<groupId>no.nav.familie.kontrakter</groupId>
			<artifactId>felles</artifactId>
			<version>${kontrakter.version}</version>
		</dependency>
		<!-- Logging og metrikker -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
		</dependency>
		<dependency>
			<groupId>com.papertrailapp</groupId>
			<artifactId>logback-syslog4j</artifactId>
			<version>1.0.0</version> <!-- August, 2014, men det er den som blir brukt på NAV -->
		</dependency>
		<dependency>
			<groupId>no.nav.familie.felles</groupId>
			<artifactId>log</artifactId>
			<version>${felles.version}</version>
		</dependency>
		<dependency>
			<groupId>io.micrometer</groupId>
			<artifactId>micrometer-registry-prometheus</artifactId>
		</dependency>

		<!-- test -->
		<dependency>
			<groupId>com.github.tomakehurst</groupId>
			<artifactId>wiremock-jre8</artifactId>
			<version>2.33.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>no.nav.familie.kontrakter</groupId>
			<artifactId>enslig-forsorger-test</artifactId>
			<version>${kontrakter.version}</version>
		</dependency>
		<dependency>
			<groupId>io.mockk</groupId>
			<artifactId>mockk</artifactId>
			<version>${mockk.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jetbrains.kotlin</groupId>
			<artifactId>kotlin-test-junit5</artifactId>
			<version>${kotlin.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>no.nav.security</groupId>
			<artifactId>token-validation-spring-test</artifactId>
			<version>${nav.security.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>dev.akkinoc.spring.boot</groupId>
			<artifactId>logback-access-spring-boot-starter</artifactId>
			<version>3.3.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>postgresql</artifactId>
			<version>1.17.2</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-java</artifactId>
			<version>${cucumber.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-junit-platform-engine</artifactId>
			<version>${cucumber.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-suite</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>



	<build>
		<sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
		<testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
		<finalName>${project.artifactId}</finalName>

		<plugins>
			<plugin>
				<groupId>org.jetbrains.kotlin</groupId>
				<artifactId>kotlin-maven-plugin</artifactId>
				<configuration>
					<args>
						<arg>-Xjsr305=strict</arg>
					</args>
					<compilerPlugins>
						<plugin>spring</plugin>
					</compilerPlugins>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.jetbrains.kotlin</groupId>
						<artifactId>kotlin-maven-allopen</artifactId>
						<version>${kotlin.version}</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<mainClass>${start-class}</mainClass>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M6</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<id>ktlint</id>
						<phase>verify</phase>
						<configuration>
							<target name="ktlint">
								<java taskname="ktlint" dir="${basedir}" fork="true" failonerror="true"
									  classpathref="maven.plugin.classpath" classname="com.pinterest.ktlint.Main">
									<arg value="src/**/*.kt"/>
								</java>
							</target>
						</configuration>
						<goals>
							<goal>run</goal>
						</goals>
					</execution>
					<execution>
						<id>ktlint-format</id>
						<phase>validate</phase>
						<configuration>
							<target name="ktlint">
								<java taskname="ktlint" dir="${basedir}" fork="true" failonerror="true"
									  classpathref="maven.plugin.classpath" classname="com.pinterest.ktlint.Main">
									<jvmarg value="--add-opens"/>
									<jvmarg value="java.base/java.lang=ALL-UNNAMED"/>
									<arg value="-F"/>
									<arg value="src/**/*.kt"/>
								</java>
							</target>
						</configuration>
						<goals>
							<goal>run</goal>
						</goals>
					</execution>
				</executions>
				<dependencies>
					<dependency>
						<groupId>com.pinterest</groupId>
						<artifactId>ktlint</artifactId>
						<version>0.45.2</version>
					</dependency>
					<!-- additional 3rd party ruleset(s) can be specified here -->
				</dependencies>
			</plugin>

		</plugins>
	</build>

</project>
